--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 <header class="header">
+  <div class = "heading">
+    <h1 class="title h3">Book Trader</h1>
+  </div>
   <div class="navbar">
     <% if user_signed_in? %>
       <div class="user_nav grid-6">
