--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,20 +1,81 @@
 <div>
-    <h3>
-      投稿する
-    </h3>
-    <%= form_for @book do |f| %>
-    <div class="field">
-    <%= f.file_field :goods %>
+  <%= form_for @book do |f| %>
+
+  <div class="panel panel-default">
+
+    <div class="panel-heading">
+    <h3 class="panel-title">出品画像（必須）</h3>
     </div>
+    <div class="goods-picture">
+      <%= f.file_field :goods %>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">本の名前（必須）</h3>
+    </div>
+    <div class="panel-body">
       <%= f.text_field :title %>
-      <%= f.text_field :category %>
-      <%= f.text_field :cluster %>
-      <%= f.number_field :price %>
-      <%= f.text_field :author %>
-      <%= f.text_field :condition %>
-      <%= f.text_area :detail %>
-      <%= f.submit %>
-    <% end %>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">カテゴリー（必須）</h3>
+    </div>
+    <div class="panel-body">
+      <select type="text" name="book[category]" id="book_category" >
+        <option value="教養科目">教養科目</option>
+        <option value="専門科目(APS)">専門科目(APS)</option>
+        <option value="専門科目(APM)">専門科目(APM)</option>
+        <option value="言語科目">言語科目</option>
+      </select>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">クラスター</h3>
+    </div>
+    <div class="panel-body">
+      <select type="text" name="book[cluster]" id="book_cluster" >
+        <option value="環境・開発">環境・開発(APS専門)</option>
+        <option value="観光学">観光学(APS)</option>
+        <option value="文化・社会・メディア">文化・社会・メディア(APS専門)</option>
+        <option value="国際関係">国際関係(APS専門)</option>
+        <option value="経営戦略と組織">経営戦略と組織(APM専門)</option>
+        <option value="イノベーション・経済学">イノベーション・経済学(APM専門)</option>
+        <option value="マーケティング">マーケティング(APM専門)</option>
+        <option value="会計・ファイナンス">会計・ファイナンス(APM専門)</option>
+      </select>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">価格（必須）</h3>
+    </div>
+    <div class="panel-body">
+    <%= f.number_field :price %>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">著者名</h3>
+    </div>
+    <div class="panel-body">
+    <%= f.text_field :author %>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">本の状態（必須）</h3>
+    </div>
+    <div class="panel-body">
+    <%= f.text_field :condition %>
+    </div>
+
+    <div class="panel-heading">
+    <h3 class="panel-title">詳細</h3>
+    </div>
+
+    <div class="panel-body">
+    <%= f.text_area :detail,class:"detail-area" %>
+    </div>
+
+    <%= f.submit %>
+  <% end %>
 </div>
 
 <!--
