--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,11 @@
-<header class="header header--section">
-  <h1 class="text-middle">
-    <i class="icon-movie color-gray-light"></i><%= @book.title %>
-  </h1>
-</header>
+
+
 <div class="container">
+    <div class="book-title">
+      <h1>
+        <i class="icon-movie color-gray-light"></i><%= @book.title %>
+      </h1>
+    </div>
     <div class="book_image"><%= image_tag @book.goods %></div>
     <table class="table table-bordered">
       <tr>
@@ -38,17 +40,20 @@
         <%= link_to "コメントを投稿", new_book_comment_path(@book), method: :get %>
       </h2>
     </span>
-    <span>
+    <div>
       <% @book.comments.each do |c| %>
-        <a href="/books/<%= c.id %>"></a>
-        <h3 class="text-xsmall text-overflow" title="<%= c.comment %>">
-          <%= c.nickname %>
-        </h3>
-        <h3 class="text-xsmall text-overflow" title="<%= c.comment %>">
-          <%= c.comment %>
-        </h3>
+        <div class="poster">
+          <a href="/books/<%= c.id %>"></a>
+          <h3 class="text-xsmall text-overflow" title="<%= c.comment %>">投稿者: <%= c.nickname %>
+          </h3>
+        </div>
+        <div class="content">
+          <h3 class="text-xsmall text-overflow" title="<%= c.comment %>">
+            <%= c.comment %>
+          </h3>
+        </div>
       <% end %>
-    </span>
+    </div>
   </div>
 
   <div class="container">
@@ -65,5 +70,4 @@
       </span>
     <% end %>
   </div>
-
 </div>
