--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,5 @@
-<div>
+<div class="selling-form">
   <%= form_for @book do |f| %>
-
   <div class="panel panel-default">
 
     <div class="panel-heading">
