--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
   </div>
   <div class="navbar">
     <% if user_signed_in? %>
-      <div class="user_nav grid-6">
         <ul>
           <li><%= link_to "ホーム", root_path, mothod: :get %></li>
           <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
@@ -21,11 +20,12 @@
           <li><%= link_to "検索", search_books_path,method: :get %></li>
           <li><a href="/users/<%= current_user.id %>">マイページ</a></li>
         </ul>
-      </div>
     <% else %>
-      <div class="grid-6">
-        <%= link_to "ログイン", new_user_session_path, class: 'post' %>
-        <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+      <ul>
+        <li><%= link_to "ホーム", root_path, mothod: :get %></li>
+        <li><%= link_to "ログイン", new_user_session_path, class: 'post' %></li>
+        <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
+      </ul>
       </div>
     <% end %>
   </div>
