--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container row">
 <div class="genre">
-  <h1 class="section h2 te">
+  <h1 class="section h2">
     作品一覧
   </h1>
 </div>
