--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
- <div class="contents">
+<div class="user-registration">
     <h2>Sign up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
@@ -30,4 +30,4 @@
         <%= f.submit "Sign up" %>
       </div>
     <% end %>
-  </div>
+</div>
