--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<div class="selling-form">
+<div class="form">
   <%= form_for @book do |f| %>
   <div class="panel panel-default">
 
@@ -41,6 +41,8 @@
         <option value="イノベーション・経済学">イノベーション・経済学(APM専門)</option>
         <option value="マーケティング">マーケティング(APM専門)</option>
         <option value="会計・ファイナンス">会計・ファイナンス(APM専門)</option>
+        <option value="教養科目">教養科目</option>
+        <option value="言語科目">言語科目</option>
       </select>
     </div>
 
