--- a/app/views/books/create.html.erb
+++ b/app/views/books/create.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
-  <div class="success">
+  <div class="certification_wrapper">
     <h3>
       投稿が完了しました。
     </h3>
-    <a class="btn" href="/books">投稿一覧へ戻る</a>
+    <h3 class="h3">
+      <%= link_to "投稿一覧に戻る", root_path, method: :get %>
+    </h3>
   </div>
 </div>
