--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,35 +1,37 @@
-  <div class="container row">
-    <header class="header-section">
-      <h2 class="text-middle">
-        <i class="icon-movie color-gray-light"></i>投稿する作品を検索
-      </h2>
-
-    </header>
+<div class="containar">
+  <div class="container">
+    <div class="page-info">
+      <h3 class="text-middle h3">
+      投稿する作品を検索
+      </h3>
+    </div>
+    <div class ="input-group">
+      <%= form_tag('/books/search', method: :get) do%>
+        <input class="form-control" name="keyword" placeholder="作品名で検索" type="text" value="">
+          <button class="btn btn-default" title="検索" type="button">検索する</button>
+        </input>
+      <% end %>
+    </div>
   </div>
-
-    <%= form_tag('/books/search', method: :get) do%>
-
-      <input class="search__query" name="keyword" placeholder="作品名で検索" type="text" value=""><button class="btn-search" title="検索" type="submit"></button><i class="icon-search"></i></input>
-
-    <% end %>
-
-  <div class="container row">
-    <h2 class="text-middle">
-      <i class="icon-movie color-gray-light"></i>検索結果
-    </h2>
-    <ul class="big_col">
-    <% @books.each do |book| %>
-    <h3 class="title h2"="<%= book.title %>">
-      <%= book.title %>
+  <div class="container">
+    <h3 class="text-middle h3 section">
+      検索結果
     </h3>
-    <div class="book_image"><%= image_tag book.goods %>
-    <%= link_to "詳細", book_path(book.id), method: :get %></div>
-    <li class="col">
-      <a href="/books/<%= book.id %>"></a>
-    </li>
-    <% end %>
-    </ul>
-  <%= paginate(@books) %>
+      <ul class="flexbox all_books">
+        <div class="row">
+          <% @books.each do |book| %>
+            <li class="each book col-xs-4">
+              <div class="book-title">
+                <%= book.title %>
+              </div>
+              <div class="book-image">
+              <%= link_to image_tag(book.goods, :class => "img-thumbnail"), book_path(book.id), method: :get %>
+              </div>
+            </li>
+          <% end %>
+        </div>
+      </ul>
+    <%= paginate(@books) %>
+  </div>
 </div>
-
 
