--- a/app/views/books/update.html.erb
+++ b/app/views/books/update.html.erb
@@ -1,8 +1,10 @@
-  <div class="contents row">
-    <div class="success">
-      <h3>
-        更新が完了しました。
-      </h3>
-      <a class="btn" href="/">投稿一覧へ戻る</a>
-    </div>
+<div class="container">
+  <div class="certification_wrapper">
+    <h3 class="h3">
+      更新が完了しました。
+    </h3>
+    <h3 class="h3">
+      <%= link_to "投稿一覧に戻る", root_path, method: :get %>
+    </h3>
   </div>
+</div>
