--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<div class="user-registration">
-    <h2>Sign up</h2>
+<div class="container">
+    <h3 class= "h3 section">Sign up</h3>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="field">
+      <div class="fieldset">
+      <%= f.label :profile_picture %><br />
+      <%= f.file_field :avatar %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :nickname %><br />
-        <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
+        <%= f.text_field :nickname, autofocus: true, maxlength: "6", class: " form-control" %>
       </div>
 
-      <div class="field">
+      <div class="form-group">
         <%= f.label :email %><br />
-        <%= f.email_field :email %>
+        <%= f.email_field :email, class: " form-control" %>
       </div>
 
-      <div class="field">
+      <div class="form-group">
         <%= f.label :password %>
         <% if @validatable %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off", class: " form-control"  %>
       </div>
 
-      <div class="field">
+      <div class="form-group">
         <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: " form-control"  %>
       </div>
 
       <div class="actions">
@@ -31,3 +36,4 @@
       </div>
     <% end %>
 </div>
+<!-- , :html => {:class => "form-control"} -->
