--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,22 @@
 <div class="user_page">
-  <header class="user_page-header">
-    <div class="yjContainer">
-        <h2><%= current_user.nickname %> <span>さんのマイページ</span></h2>
-    </div>
-  </header>
+  <div class="container">
+    <h2 class="text-middle h2"><%= current_user.nickname %> <span>さんのマイページ</span></h2>
+  </div>
 </div>
-
-<div class="contents">
-  <p>出品した商品一覧</p>
-  <% current_user.books.each do |book| %>
-    <h2 class="title h1"="<%= book.title %>">
-      <%= book.title %>
-    </h2>
-    <div class="book_image"><%= image_tag book.goods %>
-    <%= link_to "詳細", book_path(book.id), method: :get %></div>
-    <ul class="col">
-      <a href="/books/<%= book.id %>"></a>
+<div class="container">
+  <h3 class="text-middle h3 section">出品した商品一覧</h3>
+    <ul class="flexbox all_books">
+      <div class="contents row">
+          <% current_user.books.each do |book| %>
+            <li class="each book col-xs-4">
+              <div class="book-title">
+              <%= book.title %>
+              </div>
+              <div class="book-image">
+              <%= link_to image_tag(book.goods, :class => "img-thumbnail"), book_path(book.id), method: :get %>
+              </div>
+            </li>
+          <% end %>
+      </div>
     </ul>
-  <% end %>
 </div>
