--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -5,7 +5,7 @@
     <div class="panel-heading">
     <h3 class="panel-title">出品画像（必須）</h3>
     </div>
-    <div class="goods-picture">
+    <div class="goods-picture form">
       <%= f.file_field :goods %>
     </div>
 
