--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -17,15 +17,18 @@
     <h3 class="text-middle h3 section">
       検索結果
     </h3>
-      <ul class="flexbox all_books">
-        <div class="row">
+      <ul class="all_books">
+        <div class="row flex">
           <% @books.each do |book| %>
-            <li class="each book col-xs-4">
-              <div class="book-title">
-                <%= book.title %>
-              </div>
+            <li class="col-sm-4 col-md-3">
               <div class="book-image">
               <%= link_to image_tag(book.goods, :class => "img-thumbnail"), book_path(book.id), method: :get %>
+              </div>
+                <div class="book-title">
+                <h3><%= book.title %></h3>
+              </div>
+              <div class="book-price">
+                <h3>¥<%= book.price %></h3>
               </div>
             </li>
           <% end %>
