--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -42,6 +42,7 @@
       / %h3.h3 コメントを投稿
       = f.text_field :comment, placeholder: 'コメントを書いてね！', style: 'width: 100%;height: 60px;'
       = f.submit
+  - if current_user.id == @book.user_id
     %span.label
       %h3.h3
         = link_to '削除', "/books/#{@book.id}", method: :delete
